<resources>
    <string name="app_name">Motivation1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guests">Todos os convidados</string>
    <string name="menu_present">Presentes</string>
    <string name="menu_absent">Ausentes</string>
    <string name="nome">Nome</string>
    <string name="presentes">Presentes</string>
    <string name="presen_a">Presença</string>
    <string name="ausentes">Ausentes</string>
    <string name="salvar">Salvar</string>
    <string name="todo">TODO</string>
</resources>